--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
-Flask==3.0.0
-requests==2.31.0
-python-dotenv==1.0.0
+beautifulsoup4==4.14.3
+blinker==1.9.0
+certifi==2026.2.25
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
 deep-translator==1.11.4
-gunicorn==21.2.0
-
-
-
+Flask==3.1.3
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+python-dotenv==1.2.1
+requests==2.32.5
+soupsieve==2.8.3
+typing_extensions==4.15.0
+urllib3==2.6.3
+Werkzeug==3.1.6
